@@ -40,6 +40,7 @@ https://github.com/elastic/beats/compare/v5.0.0-rc1...master[Check the HEAD diff
 - Change several `OpenProcess` calls on Windows to request the lowest possible access provilege.  {issue}1897[1897]
 - Fix system.memory.actual.free high value on Windows. {issue}2653[2653]
 - Calculate the fsstat values per mounting point, and not filesystem. {pull}2777[2777]
+- Fix `system.process.start_time` on Windows. {pull}2848[2848]
 
 *Packetbeat*
 
